2005-03-26  Stefan Jahn  <stefan@lkcc.org>

	* vector.cpp: New functions: contains() and sort().

	* qucsdefs.h (qucs_definition_available): Added HB item.

	* complex.cpp: Added < and > operators.

	* hbsolver.h, hbsolver.cpp: Started to implement the
	harmonic balance solver.  Not yet working at all, just
	some preparations.

2005-03-16  Stefan Jahn  <stefan@lkcc.org>

	* Makefile.am: Avoid re-generation of flex/bison files
	when not in maintainer mode.

2005-03-13  Stefan Jahn  <stefan@lkcc.org>

	* net.cpp: Fixed a bug occurring when the users specifies
	a setup requiring an extra DC analysis in the main sweep.

	* ptrlist.cpp: New template class for lists of pointers.

2005-03-10  Stefan Jahn  <stefan@lkcc.org>

	* strlist.cpp: New helper functions to add/append whole
	string lists.

	* qucsdefs.h (qucs_definition_available): Added optional
	'Temp' parameter to the 'Pac' and 'MCOUPLED' components.

	* evaluate.cpp: Implemented a 'linspace' function as well
	as stability circles and noise circles.

	* equation.cpp: Evaluators can now add new data dependencies
	to their results.

2005-02-27  Stefan Jahn  <stefan@lkcc.org>

	* evaluate.cpp (THROW_MATH_EXCEPTION): Made this macro
	compatible with non-ISOC99 compilers.

2005-02-21  Stefan Jahn  <stefan@lkcc.org>

	* acsolver.cpp (solve_noise): Hopefully fixed AC noise
	analysis. Nase voll, Faxen dicke, jetze.

2005-02-19  Stefan Jahn  <stefan@lkcc.org>

	* trsolver.cpp: The transient solver can now tell its
	integrators to be in certain states.  Thus its initial
	run can be indicated.  Also the initial conditions (nodesets)
	are now correctly evaluated.

	* integrator.cpp (integrate): New integration wrapper
	able to evaluate a state flag.  Currently used for initial
	transient analysis run.

2005-02-16  Stefan Jahn  <stefan@lkcc.org>

	* dcsolver.cpp: If a preferred convergence algorithm is
	requested skip this one in the fallback list.

2005-02-13  Stefan Jahn  <stefan@lkcc.org>
